--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
                                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
 <ul class="navbar-nav ml-auto">
     <li class="nav-item active">
-        <a class="nav-link" href="#home">Início</a>
+        <a class="nav-link" href="#inicio">Início</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#about">Sobre Nós</a>
+        <a class="nav-link" href="#sobre">Sobre</a>
     </li>
     <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#services" id="servicesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle" href="#servicos" id="servicesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Serviços
         </a>
         <div class="dropdown-menu" aria-labelledby="servicesDropdown">
@@ -91,10 +91,10 @@
         </div>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#portfolio">Portfólio</a>
+        <a class="nav-link" href="#projetos">Portfólio</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#contact">Contato</a>
+        <a class="nav-link" href="#contato">Contato</a>
     </li>
 </ul>
                                 </div>
@@ -123,7 +123,7 @@
 
         <!-- banner begin -->
         <div class="banner-content-slide-3 owl-carousel owl-theme" id="banner-content-slide-3">
-            <div class="banner-3 slide-1">
+            <div class="banner-3 slide-1" id="inicio">
                 <div class="container">
                     <div class="row justify-content-xl-start justify-content-lg-center justify-content-center">
                         <div class="col-xl-6 col-lg-8 col-md-8">
@@ -223,7 +223,7 @@
         <!-- choosing reason end -->
 
         <!-- about begin -->
-        <div class="about-3">
+        <div class="about-3" id="sobre">
             <div class="container">
                 <div class="row justify-content-between">
                     <div class="col-xl-5 col-lg-5 col-md-6">
@@ -296,7 +296,7 @@
         <!-- statics end -->
 
         <!-- service begin -->
-        <div class="service service-3">
+        <div class="service service-3" id="servicos">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-xl-6 col-lg-8 col-md-8">
@@ -411,13 +411,13 @@
         <!-- service end -->
 
         <!-- support begin -->
-        <div class="support support-3">
+        <div class="support support-3" >
             <div class="container">
                 <div class="row justify-content-xl-between justify-content-lg-between justify-content-center">
                     
                     <div class="col-xl-5 col-lg-5 col-md-8 d-xl-flex d-lg-flex d-block align-items-center">
                         <div class="part-text">
-                            <span class="phone-number">+244 923 456 789</span>
+                            <span class="phone-number">+244 923 332 795</span>
                             <p>Entre em contato com nossa equipe para saber mais sobre nossos serviços diversificados e soluções personalizadas.</p>
                             
                             <a href="#" class="support-button">Contacte-nos <i class="fas fa-long-arrow-alt-right"></i></a>
@@ -439,7 +439,7 @@
         <!-- support end -->
 
         <!-- project begin -->
-        <div class="project project-3">
+        <div class="project project-3" id="projetos">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-xl-6 col-lg-8 col-md-8">
@@ -504,7 +504,7 @@
         <!-- project end -->
 
         <!-- team begin -->
-        <div class="team-3">
+        <div class="team-3" id="contato">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-xl-6 col-lg-8 col-md-8">
@@ -580,7 +580,7 @@
         <!-- team end -->
 
         <!-- testimonial begin -->
-        <div class="testimonial-3">
+        <div class="testimonial-3" id="contato">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-xl-6 col-lg-6 col-md-8">
