--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <a class="nav-link" href="#projetos">Portfólio</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#contato">Contato</a>
+        <a class="nav-link" href="#contacto">contacto</a>
     </li>
 </ul>
                                 </div>
@@ -104,12 +104,7 @@
                     <div class="col-xl-4 col-lg-4 d-xl-flex d-lg-flex d-block align-items-center">
                         <div class="support-area">
                             <ul>
-                                <li>
-                                    <a href="#" class="user-button active"><i class="fas fa-user"></i></a>
-                                </li>
-                                <li>
-                                    <a href="#" class="user-button"><i class="fas fa-envelope-open"></i></a>
-                                </li>
+                           
                                 <li>
                                     <a href="#" class="quote-button">Solicitar Orçamento</a>
                                 </li>
@@ -418,7 +413,7 @@
                     <div class="col-xl-5 col-lg-5 col-md-8 d-xl-flex d-lg-flex d-block align-items-center">
                         <div class="part-text">
                             <span class="phone-number">+244 923 332 795</span>
-                            <p>Entre em contato com nossa equipe para saber mais sobre nossos serviços diversificados e soluções personalizadas.</p>
+                            <p>Entre em contacto com nossa equipe para saber mais sobre nossos serviços diversificados e soluções personalizadas.</p>
                             
                             <a href="#" class="support-button">Contacte-nos <i class="fas fa-long-arrow-alt-right"></i></a>
                         </div>
@@ -428,7 +423,7 @@
                             <a href="#" class="cta-button">SOLICITE UM ORÇAMENTO</a>
                             <h2>Para mais informações
                                 sobre nossos serviços
-                                diversos, entre em contato
+                                diversos, entre em contacto
                                 conosco.</h2>
                         </div>
                     </div>
@@ -504,7 +499,7 @@
         <!-- project end -->
 
         <!-- team begin -->
-        <div class="team-3" id="contato">
+        <div class="team-3" id="contacto">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-xl-6 col-lg-8 col-md-8">
@@ -580,7 +575,7 @@
         <!-- team end -->
 
         <!-- testimonial begin -->
-        <div class="testimonial-3" id="contato">
+        <div class="testimonial-3" id="contacto">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-xl-6 col-lg-6 col-md-8">
@@ -777,7 +772,7 @@
                         <div class="small-contact">
                             <h3>Tem algum projeto
                                 em mente?</h3>
-                            <p>Entre em contato conosco para discutir suas necessidades em qualquer uma de nossas áreas de atuação.</p>
+                            <p>Entre em contacto conosco para discutir suas necessidades em qualquer uma de nossas áreas de atuação.</p>
                             <form>
                                 <input type="text" placeholder="Seu nome">
                                 <input type="email" placeholder="Seu email">
