--- a/index.html
+++ b/index.html
@@ -223,10 +223,8 @@
                 <div class="row justify-content-between">
                     <div class="col-xl-5 col-lg-5 col-md-6">
                         <div class="part-img">
-                            <img class="main-img" src="images/about-3.jpg" alt="" data-aos="fade" data-aos-offset="300" data-aos-duration="1000" data-aos-easing="ease-in-sine">
-                            <img class="overlap-img" src="images/about-3-small.jpg" alt="" data-aos="fade-right" data-aos-offset="300" data-aos-duration="1200" data-aos-easing="ease-in-sine">
-                            <a href="https://www.youtube.com/watch?v=NU9Qyic_mX0" class="play-button mfp-iframe"><i class="fas fa-play"></i></a>
-                        </div>
+                            <img class="main-img" src="images/sobrebanner.webp" alt="" data-aos="fade" data-aos-offset="300" data-aos-duration="1000" data-aos-easing="ease-in-sine">
+                       </div>
                     </div>
                     <div class="col-xl-6 col-lg-10 col-md-6">
                         <div class="part-text">
