--- a/index.html
+++ b/index.html
@@ -450,41 +450,11 @@
                         <div class="project-2-slider owl-carousel owl-theme">
                             <div class="single-project">
                                 <div class="part-img">
-                                    <img src="images/project-3.jpg" alt="">
+                                    <img src="images/project-5.webp" alt="">
                                     <div class="content-on-img">
-                                        <h4>Sistema de<br>
-                                                Gestão</h4>
+                                        <h4>Marketplace de<br>
+                                                Aprendizagem</h4>
                                         <span class="category">Software</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="single-project">
-                                <div class="part-img">
-                                    <img src="images/project-4.jpg" alt="">
-                                    <div class="content-on-img">
-                                        <h4>Infraestrutura<br>
-                                                Corporativa</h4>
-                                        <span class="category">Redes</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="single-project">
-                                <div class="part-img">
-                                    <img src="images/project-5.jpg" alt="">
-                                    <div class="content-on-img">
-                                        <h4>Obra<br>
-                                                Pública</h4>
-                                        <span class="category">Construção Civil</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="single-project">
-                                <div class="part-img">
-                                    <img src="images/project-6.jpg" alt="">
-                                    <div class="content-on-img">
-                                        <h4>Posto de<br>
-                                            Combustível</h4>
-                                        <span class="category">Exploração</span>
                                     </div>
                                 </div>
                             </div>
